--- a/index.html
+++ b/index.html
@@ -116,18 +116,20 @@
                 <div class="container-flags">
                     <div class="title">Destinations</div>
 
-                    <div class="content-flags_box">
-                        <div class="content-box">
-                            <img src="assets/flags/france.jpg" alt="flags_france">
-                            <div class="flag-name">France</div>
-                        </div>
-                        <div class="content-box removed">
-                            <img src="assets/flags/bresil.jpg" alt="flags_bresil">
-                            <div class="flag-name">Brasil</div>
-                        </div>
-                        <div class="content-box removed">
-                            <img src="assets/flags/algerie.jpg" alt="flags_algerie">
-                            <div class="flag-name">Algeria</div>
+                    <div class="wrap-overflow">
+                        <div class="content-flags_box">
+                            <div class="content-box">
+                                <img src="assets/flags/france.jpg" alt="flags_france">
+                                <div class="flag-name">France</div>
+                            </div>
+                            <div class="content-box">
+                                <img src="assets/flags/bresil.jpg" alt="flags_bresil">
+                                <div class="flag-name">Brasil</div>
+                            </div>
+                            <div class="content-box">
+                                <img src="assets/flags/algerie.jpg" alt="flags_algerie">
+                                <div class="flag-name">Algeria</div>
+                            </div>
                         </div>
                     </div>
                 </div>
